<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_24"
            android:title="@string/dashboard" />
    <item
            android:id="@+id/nav_elections"
            android:icon="@drawable/ic_elections_24"
            android:title="@string/elections_title" />
    <item
            android:id="@+id/nav_votes"
            android:icon="@drawable/ic_votes_24"
            android:title="@string/my_votes" />
    <item
            android:id="@+id/nav_results"
            android:icon="@drawable/ic_results_24"
            android:title="@string/results" />
    <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_24"
            android:title="@string/profile" />
</menu>
